--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "author": "Denis Kreshikhin",
   "license": "MIT",
   "dependencies": {
-    "natural": "*",
-    "lodash": "*"
+    "natural": "0.2.1",
+    "lodash": "3.10.1"
+  },
+  "devDependencies": {
+    "mocha": "2.3.3",
   },
   "scripts": {
     "test": "mocha test"
